# NV-Raw2insights-US

./: .gitignore  CONTRIBUTING.md  LICENSE.weights  README.md  inference.py  prepare.py  pyproject.toml  train_phase1.py  train_phase2.py
models/: __init__.py  autoencoder.py  sound_speed.py
utils/: metrics.py  training.py
